--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700&family=Yellowtail&display=swap');
 
+
 *{
-  color: #fff;
+  color: #000000;
   font-family: "Titillium Web";
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
-  background: linear-gradient(#393939,black);
-}
 
 header{
   width: 100%;
@@ -17,7 +15,7 @@ header{
 }
 
 .inicio{
-  color: #fff;
+  color: #F5EBDC;
 }
 
 .inicio .contenido-seccion header{
@@ -37,7 +35,7 @@ nav {
 }
 
 .color{
-    color: #e590d2;
+    color: #755A2F;
     font-family: "Yellowtail";
 }
 
@@ -59,7 +57,7 @@ label {
     transition-duration: .3s;
     box-sizing: border-box;
     display: inline-block;
-    border: 1px solid #fff;
+    border: 1px solid #000000;
     border-radius: 5px;
     width: 30px;
     height: 30px;
@@ -71,7 +69,7 @@ label {
 }
 
 label:hover{
-    box-shadow: 0 0 35px #fff;
+    box-shadow: 0 0 35px #000000;
 }
 
 li {
@@ -82,15 +80,15 @@ li {
 
 a{
     text-decoration: none;
-    color: #fff;
+    color: #000000;
 }
 
 .info-perfil{
-  padding: 35px;
+  padding: 30px;
 }
 
 .title{
-  color: #e590d2;
+  color: #000000;
 }
 
 .info{
@@ -99,6 +97,10 @@ a{
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
+  background: #F5ECDD;
+  border-radius: 80px;
+  padding: 20px;
+  margin: 20px;
   }
 
   .foto{
@@ -108,12 +110,11 @@ a{
 
   img{
     border-radius: 60%;
-    border: 1px solid #fff;
+    border: 1px solid #000000;
     width: 15%;
   }
 
   .titulo-seccion{
-    padding-bottom: 20px;
     text-align: center;
     font-family: "Yellowtail";
     font-size: 40px;
@@ -121,7 +122,7 @@ a{
 
   .info-container{
     padding-right: 20px;
-    border-right: 1px solid #bab9b9;
+    border-right: 1px solid #CAB694;
   }
 
   .contenido-seccion{
@@ -129,7 +130,7 @@ a{
   }
 
   .especial{
-    color: #e590d2;
+    color: #755A2F;
     font-weight: bold;
   }
 
@@ -142,10 +143,10 @@ a{
   
   i{
     padding: 9px 0;
-    color: #e590d2;
+    color: #755A2F;
     width: 40px;
     height: 40px;
-    border: 2px solid #e590d2;
+    border: 2px solid #755A2F;
     border-radius: 50%;
     margin-bottom: 5px;
   }
@@ -156,15 +157,22 @@ a{
     margin: 8px 0;
   }
 
-  .habilidades{
-    text-align: center;
-    color: #fff;
-    border-bottom: 1px solid #e590d2;
+  .titulo-seccion{
+    margin: 15px;
   }
 
+  .habilidades{
+    text-align: center;
+    color: #000000;
+  }
 
+  .hab-section{
+    padding: 10px;
+    border-radius: 80px;
+    background: #F5ECDD;
+  }
   .col{
-    margin-top: 45px;
+    margin-top: 30px;
     text-align: center;
   }
 .cont-barra{
@@ -194,7 +202,7 @@ a{
   text-align: center;
   width: 100%;
     display: inline-block;
-    color: white;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     padding: 10px;
     margin-bottom: 10px;
@@ -202,17 +210,17 @@ a{
 
 .datos{
     width: 40%;
-    border-bottom: 1px solid #e590d2;
+    border-bottom: 1px solid #755A2F;
 }
 
 .descripcion{
-    border-left: 1px solid #e590d2;
+    border-left: 1px solid #755A2F;
     padding-left: 20px;
 }
 
 .contacto{
     padding: 30px;
-    color: #e6e6e6;
+    color: #000000;
     text-align: center;
 }
 
@@ -242,14 +250,16 @@ table{
   display: flex;
   justify-content: space-around;
   width: 100%;
+  padding: 15px;
 }
 
 .btn{
-  font-size: 20px;
-  color: #e590d2;
-  border: 1px solid #e590d2;
-  padding: 8px;
+  font-size: 18px;
+  border: 1px solid #755A2F;
+  padding: 12px;
   margin: 10px;
+  border-radius: 30px;
+  background: #CAB694;
 }
 
 @media screen and (max-width:800px){
