--- a/styles.css
+++ b/styles.css
@@ -668,7 +668,6 @@ h3.hello span {
 }
 
 .portfolio .portfolio-heading .info-portfolio .img-portfolio {
-  width: 450px;
   padding: 10px;
   height: auto;
   border-radius: 10px;
@@ -705,6 +704,10 @@ h3.hello span {
   margin-bottom: 5px;
 }
 
+.portfolio .portfolio-heading .info-portfolio p {
+text-align: justify;
+}
+
 .portfolio .portfolio-item:hover,
 .portfolio .portfolio-heading .info-portfolio .img-low:hover,
 .portfolio .portfolio-heading .info-portfolio .img-digital:hover,
@@ -724,6 +727,7 @@ h3.hello span {
 
 .portfolio .portfolio-heading .info-dot li {
   line-height: 1.6;
+  text-align: justify;
 }
 
 
@@ -920,10 +924,6 @@ h3.hello span {
   .about .about-content .skills,
   .about .about-content .personal-info {
     flex: 0 0 100%;
-    max-width: 100%;
-  }
-
-  .portfolio .container .proyecto-detalle .portfolio-heading .info-grid {
     max-width: 100%;
   }
 
