--- a/styles.css
+++ b/styles.css
@@ -616,7 +616,7 @@ h3.hello span {
 }
 
 .portfolio .container {
-  padding-bottom: 40PX;
+  padding-bottom: 40px;
 }
 
 .portfolio .portfolio-heading {
@@ -624,8 +624,6 @@ h3.hello span {
   max-width: 100%;
   margin-bottom: 40px;
 }
-
-
 
 .portfolio .portfolio-item {
   flex: 0 0 25%;
@@ -731,7 +729,12 @@ text-align: justify;
   text-align: justify;
 }
 
-
+.portfolio .container .proyecto-detalle .portfolio-heading .info-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+  margin-bottom: 30px;
+}
 
 /*contacto*/
 .contact-title {
@@ -928,25 +931,68 @@ text-align: justify;
     max-width: 100%;
   }
 
-  .portfolio .container .proyecto-detalle .portfolio-heading .info-grid {
-    display: grid;
-    grid-template-columns: 1fr !important;
-    gap: 1.5rem;
-    margin-bottom: 30px;
+
+}
+
+
+@media (max-width: 768px) {
+.portfolio .portfolio-item:hover,
+.portfolio .portfolio-heading .info-portfolio .img-low:hover,
+.portfolio .portfolio-heading .info-portfolio .img-digital:hover,
+.portfolio .portfolio-heading .info-portfolio .img-portfolio:hover {
+  transform: none;
+}
+
+  .portfolio .portfolio-item {
+    flex: 0 0 100%;
+    max-width: 100%;
   }
 
-  .portfolio .portfolio-heading .info-portfolio .img-digital {
+  .portfolio .portfolio-heading .info-portfolio .img-portfolio,
+  .portfolio .portfolio-heading .info-portfolio .img-digital,
+  .portfolio .portfolio-heading .info-portfolio .img-low {
     width: 250px;
   }
 
+  .portfolio .container .proyecto-detalle .portfolio-heading .info-grid {
+    grid-template-columns: 1fr;
+  }
+  .portfolio .portfolio-item {
+  margin-bottom: 20px;
+}
+
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.9);
+}
+
+.popup-content {
+  display: block;
+  margin: auto;
+  max-width: 90%;
+  max-height: 80vh;
+}
+
+.popup-close {
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 
 
 
-.portfolio .container .proyecto-detalle .portfolio-heading .info-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1.5rem;
-  margin-bottom: 30px;
-}
