--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,7 @@ ul {
   border: none;
 }
 
+
 .btn:hover {
   transform: scale(1.05);
 }
@@ -705,7 +706,7 @@ h3.hello span {
 }
 
 .portfolio .portfolio-heading .info-portfolio p {
-text-align: justify;
+  text-align: justify;
 }
 
 .portfolio .portfolio-item:hover,
@@ -937,12 +938,13 @@ text-align: justify;
 
 
 @media (max-width: 768px) {
-.portfolio .portfolio-item:hover,
-.portfolio .portfolio-heading .info-portfolio .img-low:hover,
-.portfolio .portfolio-heading .info-portfolio .img-digital:hover,
-.portfolio .portfolio-heading .info-portfolio .img-portfolio:hover {
-  transform: none;
-}
+
+  .portfolio .portfolio-item:hover,
+  .portfolio .portfolio-heading .info-portfolio .img-low:hover,
+  .portfolio .portfolio-heading .info-portfolio .img-digital:hover,
+  .portfolio .portfolio-heading .info-portfolio .img-portfolio:hover {
+    transform: none;
+  }
 
   .portfolio .portfolio-item {
     flex: 0 0 100%;
@@ -958,10 +960,15 @@ text-align: justify;
   .portfolio .container .proyecto-detalle .portfolio-heading .info-grid {
     grid-template-columns: 1fr;
   }
-  .portfolio .portfolio-item {
-  margin-bottom: 20px;
-}
 
+  .portfolio .portfolio-item {
+    margin-bottom: 15px;
+  }
+
+  .home .home-info .btns-home a:first-child {
+    margin-bottom: 1rem;
+    /* ajusta el valor según necesites */
+  }
 }
 
 .popup {
@@ -974,7 +981,7 @@ text-align: justify;
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .popup-content {
@@ -993,7 +1000,3 @@ text-align: justify;
   font-weight: bold;
   cursor: pointer;
 }
-
-
-
-
